# AutoAlign

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Ascend-install.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  back_translation.sh  install.md  magpie.sh  pyproject.toml  query_generate.sh  requirements.txt  self_instruct.sh  setup.py  sft.sh  sso.bash  standardize.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
algorithms/: .gitignore
algorithms/cai/: README.md  cai.sh  cai_util.py  change.py  change_dpo.py  delete_history.py  prepare_for_dpo.sh  prepare_for_stage.sh  temperature_sample.py
algorithms/dpo/: README.md
algorithms/example/: README.md
algorithms/iterative_dpo/: README.md
algorithms/megatron_dpo/: yes  yes.pub
algorithms/pcon/: README.md  inference_for_pcon.sh  prepare_for_dpo.sh  pretrained_models
algorithms/rlcd_sys/: README.md  inference_for_rlcd.sh  prepare_for_dpo.sh
algorithms/rm/: prepare_demo_rm.py
algorithms/self-improve/: README.md
algorithms/self-rewarding/: README.md  dpo_dataset_generator.py  sft_llama3-8b_oasst_seed_deepspeed.sh  templates.py  utils.py
algorithms/sft/: README.md
algorithms/spin/: README.md  inference_for_spin.sh  prepare_for_dpo.sh  train_dpo.sh
algorithms/sso/: README.md  build_dpo_data.bash  build_dpo_data.py  build_principles.bash  build_principles.py  build_sso_data.bash  build_sso_data.py  convert_parquet_to_json.bash  convert_parquet_to_json.py  dpo.bash  prompts.py  run_sso.bash  sso.bash
configs/: .gitignore  eval.yaml  eval_obj.yaml  eval_safety.yaml  eval_subj.yaml  zero2.json  zero3.json
data/: .gitignore  dummy_back_translation.jsonl  dummy_dpo.json  dummy_dpo.jsonl  dummy_rl.json  dummy_self_instruct.json  dummy_sft.json  dummy_spin_golden.json  dummy_spin_query.json  dummy_sso.json  dummy_sso_prompt.json  gsm8k_example_from.json  gsm8k_example_role.json  identity.json  train  ultra_binary.jsonl
data/eval/: toxic_test.json
docker/: Dockerfile.megatron-npu-910b  Dockerfile.megatron-npu-910c  Dockerfile.megatron-npu-910c.dev  Dockerfile.megatron-nvidia  Dockerfile.megatron-nvidia.dev
docs/: ascend.md  conf.py  dependency.md  develop.md  doc.md  dpo.md  eval.md  index.md  index.rst  install.md  megatron.md  merge.md  sft.md
dummy_data/: dummy_dpo.jsonl
experiments/cai/: .gitignore  README.md  delete_history.py  prepare_for_cai.py  prepare_for_stage.sh  train_dpo.sh
experiments/example/: README.md
experiments/pcon/: README.md  inference_for_pcon.sh  prepare_for_dpo.sh  train_dpo.sh
experiments/rlcd_sys/: .gitignore  README.md  inference_for_rlcd.sh  prepare_for_dpo.sh  prepare_for_rlcd.py  prepare_for_rlcd.sh  train_dpo.sh
experiments/sys_rlcd/: README.md  inference_for_rlcd.sh  prepare_for_dpo.sh  prepare_for_rlcd.py  prepare_for_rlcd.sh
experiments/ultrachat_ultrafeedback/: README.md  get_ultrafeedback.py
kernel_meta/: buildPidInfo.json
megatron_autoalign/megatron_patch_autoalign/: training_dpo.py  training_sft.py
sc/: back_translation.sh  magpie.sh  self_instruct.sh
scripts/: post_install.sh  train.sh  train_dpo.sh  train_rl.sh  train_rm.sh  train_sft.sh
scripts/data/: ultrachat_helpful_only.sh
scripts/eval/: README.md  eval.sh  eval_alpaca.sh  eval_leaderboard.sh  eval_lm-eval.sh  eval_opencompass.sh  eval_standard.sh
scripts/megatron/: README.md  env_install.sh  env_pai.sh  install.sh
scripts/serve/: serve.sh
scripts/test/: test_core.sh
scripts/tests/: test_conversation.sh
scripts/train/: dpo_qwen2_5_7b_dummy.sh  rl_qwen2_5_0_5b_ins_dummy.sh  rm_llama3-8b_utlrafeedback.sh  sft_gemma2-9b_ultrachat_deepspeed.sh  sft_glm4_ultrachat_deepspeed.sh  sft_llama2-7b_ultrachat_deepspeed.sh  sft_llama3-8b_ultrachat_deepspeed.sh  sft_llama3-8b_ultrachat_helpful_only_deepspeed.sh  sft_llama3-8b_wildchat_deepspeed.sh  sft_llama3.1-8b_infinite_deepspeed.sh  sft_llama3.1-8b_ultrachat_deepspeed.sh  sft_llama3.1-8b_zhuque.sh  sft_llama3.2-1b_infinite_7m_deespeed.sh  sft_mistral-01-7b_ultrachat_deepspeed.sh  sft_mistral-03-7b_ultrachat_deepspeed.sh  sft_mistral-7b_ultrachat_deepspeed.sh  sft_qwen-3-1.7b_infinite_7m_deespeed.sh  sft_qwen1.5_14b_ultrachat_deepspeed.sh  sft_qwen2-7b_infinite_deepspeed.sh  sft_qwen2-7b_ultrachat_deepspeed.sh  sft_qwen2.5-7b-ultrachat_Ascend.sh  sft_tinyllama_infinite_deepspeed.sh  sft_yi1.5-9b_infinite_deepspeed.sh  sft_yi1.5-9b_ultrachat_deepspeed.sh  train_mistral.sh  (+1 more)
testing-data/: Qwen2.5-1.5B_dpo_poison_en.json  Qwen2.5-1.5B_sft_poison_en.json  poison_en.json  test.json
testing_scripts/: back_translation.sh  magpie.sh  rlcd.sh  self_instruct.sh  self_rewarding.sh  spin.sh
tests/: test_conversation.py  test_conversations.py  test_core.py  test_template.py
tools/: get_ultrafeedback.py
ui/: 1.query_generate.py  Align.py  button.py  conversation.py  data_synthesis.py  entry.py  eval.py  eval_4.py  eval_visua_8.py  multi_turn.sh  page1.py  page2.py  page3.py  page4.py  page5.py  page6.py  page7.py  page8.py  page_1_副本.py  query_generate_1.py  self_rewarding.sh  sft.sh  temperature_sample.sh  train_over_visua_.py  training_visua_7.py  uitest.py
(+406 files in other folders)
