[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoalign"
description = "Get Your LLM Aligned with Minimal Annotations."
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "AutoAlign Team" }
]

dependencies = [
  "tensorboard",
  "wandb",
  "datasets",
  "sentencepiece",
  "numpy<2.0.0",
  "pandas",
  "transformers>=4.46.3,<=4.52.4",
  "pydantic",
  "packaging",
  "accelerate",
  "ninja",
  "einops",
  "fire",
  "tenacity",
  "langdetect",
  "torchmetrics==1.6.2",
  # ui
  "gradio<5",
  "streamlit==1.42.2",
  # mt-bench
  "openai>=1.0.0",
  # alpaca_eval
  "scikit-learn>=1.3",
  "modelscope",
  "httpx[socks]",
  "pyarrow!=21.0.0" # temporarily resolve https://github.com/apache/arrow/issues/47155
]

[project.optional-dependencies]
train = [
  "torch==2.6.0",
  "deepspeed==0.16.1",
  "trl>=0.9.3",
  "vllm==0.8.3",
  "flash-attn==2.7.2post1",
  "liger_kernel>=0.5.10",
]
eval = [
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "human-eval==1.0.3",
  "alpaca-eval==0.6.3",
  "huggingface-hub==0.30.0",
  "mmengine",
  "vllm==0.8.3",
]
train_ascend = [
  "torch==2.5.1",
  "torch-npu==2.5.1.post1.dev20250528"
]
doc = [
  "sphinx",
  "sphinx-autobuild",
  "myst-parser",
  "sphinx_rtd_theme",
]
dev = [
  "pytest",
  "pre-commit",
  "build",
  "twine"
]
autoalign_megatron = []
npu_train = []

[tool.pip]
extra-index-url = [
  "https://pypi.tuna.tsinghua.edu.cn/simple",
  #torch-npu / vllm-ascend
  "https://download.pytorch.org/whl/cpu/",
  "https://mirrors.huaweicloud.com/ascend/repos/pypi"
]
[project.scripts]
autoalign-cli = "autoalign.cli:main"

[tool.black]
line-length = 120
target-version = ['py310']